fix wrapped inline code in sidebar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -112,7 +112,7 @@ h2, h2 code.inline {
 }
 
 h3 {
-    @apply mt-2 mb-4 border-b  dark:border-zinc-700 text-lg md:text-[1.35rem] font-semibold ;
+    @apply mt-2 mb-4 border-b  dark:border-zinc-700 text-lg md:text-[1.35rem] font-semibold dark:font-normal;
 }
 
 
@@ -125,7 +125,7 @@ h4 {
 }
 
 h4, h4 code.inline {
-    @apply md:text-lg text-zinc-800 dark:text-zinc-300 font-semibold;
+    @apply md:text-lg text-zinc-800 dark:text-zinc-300 font-semibold dark:font-normal;
 }
 
 p {
@@ -146,7 +146,10 @@ code.output {
 }
 
 code.inline {
-    @apply text-rose-800 dark:text-rose-300 text-[0.95em]/[1.2] inline-block mx-1 border-b border-dashed border-rose-800 bg-sky-50/40 dark:bg-slate-800/60;
+    @apply text-rose-800 dark:text-rose-300 text-[0.95em]/[1.2] mx-1 border-b border-dashed border-rose-800 bg-sky-50/40 dark:bg-slate-800/60;
+    display: inline;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
 }
 
 a code.inline {
